Closed Bug 1860681 Opened 1 year ago Closed 1 year ago

120b1 fails to build with dom/media/AudioStream.cpp:607:3: error: 'TRACE_AUDIO_CALLBACK_BUDGET' was not declared in this scope;

Categories

(Core :: Audio/Video, defect, P2)

Firefox 120
defect

Tracking

()

RESOLVED FIXED
121 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox119 --- unaffected
firefox120 --- fixed
firefox121 --- fixed

People

(Reporter: s.bahro+bmo, Assigned: pehrsons)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Attached patch ff120b1_rt.patchSplinter Review

Steps to reproduce:

Building Firefox 120b1(rc1) with --disable-real-time-tracing.

Actual results:

Build fails with:
19:51.83 /var/tmp/portage/www-client/firefox-120.0_beta1/work/firefox-120.0/dom/media/AudioInputSource.cpp:157:36: error: macro "TRACE_AUDIO_CALLBACK_BUDGET" passed 3 arguments, but takes just 2
19:51.95 /var/tmp/portage/www-client/firefox-120.0_beta1/work/firefox-120.0/dom/media/AudioStream.cpp:608:57: error: macro "TRACE_AUDIO_CALLBACK_BUDGET" passed 3 arguments, but takes just 2
20:03.00 /var/tmp/portage/www-client/firefox-120.0_beta1/work/firefox-120.0/dom/media/AudioInputSource.cpp:156:3: error: 'TRACE_AUDIO_CALLBACK_BUDGET' was not declared in this scope
20:03.71 /var/tmp/portage/www-client/firefox-120.0_beta1/work/firefox-120.0/dom/media/AudioStream.cpp:607:3: error: 'TRACE_AUDIO_CALLBACK_BUDGET' was not declared in this scope

Might be some missing guards:
#1844181
https://hg.mozilla.org/mozilla-central/rev/c1ab79a9ac72c5a917843b6eda9385a7f788a807
https://hg.mozilla.org/mozilla-central/rev/3995617f816a4d3a8c448988cc7a75c3d828217d

Adding guards (e.g. attached patch) solved the issue for me;

Expected results:

Build succeeds.

Keywords: regression
Regressed by: 1844181

:pehrsons, since you are the author of the regressor, bug 1844181, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Flags: needinfo?(apehrson)

Good catch, thanks for filing! The root cause is that I added an arg to the TRACE_AUDIO_CALLBACK_BUDGET macro but forgot to mirror it in the noop-version (that you get with --disable-real-time-tracing).

Assignee: nobody → apehrson
Severity: -- → S4
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Flags: needinfo?(apehrson)
Priority: -- → P2

The variants of TRACE_AUDIO_CALLBACK_BUDGET diverged in bug 1844181.

Pushed by pehrsons@gmail.com: https://hg.mozilla.org/integration/autoland/rev/85ec9ef6176c Fix TRACE_AUDIO_CALLBACK_BUDGET with --disable-real-time-tracing. r=padenot

Comment on attachment 9360181 [details]
Bug 1860681 - Fix TRACE_AUDIO_CALLBACK_BUDGET with --disable-real-time-tracing. r?padenot!

Beta/Release Uplift Approval Request

  • User impact if declined: Bustage when building with --disable-real-time-tracing
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Trivial build-time-only change that does not affect any official release channel (and verified locally by me)
  • String changes made/needed:
  • Is Android affected?: Yes
Attachment #9360181 - Flags: approval-mozilla-beta?
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 121 Branch

Comment on attachment 9360181 [details]
Bug 1860681 - Fix TRACE_AUDIO_CALLBACK_BUDGET with --disable-real-time-tracing. r?padenot!

Approved for 120.0b3

Attachment #9360181 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: