Bug 1860681 - Fix TRACE_AUDIO_CALLBACK_BUDGET with --disable-real-time-tracing. r=padenot, a=dsmith

The variants of TRACE_AUDIO_CALLBACK_BUDGET diverged in bug 1844181.

Differential Revision: https://phabricator.services.mozilla.com/D191841